# ori-fold

./: Cargo.toml
exact_number/: Cargo.toml
exact_number/benches/: benchmark.rs
exact_number/src/: algebraic.rs  angle.rs  basis.rs  conversion.rs  docs-header.html  interval.rs  lib.rs  math.rs  parse.rs  pslq.rs  rat.rs
exact_number/src/matrix/: lu.rs  mod.rs
robust_geometry/: Cargo.toml
robust_geometry/src/: geo.rs  lib.rs
src/: check.rs  convert.rs  file.rs  filter.rs  fold.rs  geom.rs  lib.rs  manifold.rs  ser_de.rs  test_utils.rs  topology.rs  util.rs
src/filter/: intersect.rs  mod.rs  split_merge.rs
src/ser_de/: convert.rs  mod.rs  pretty.rs
src/specialized_dbg/: mod.rs
test/: invalid-x-exact-coords-baseless.fold  x-all-data.fold  x-all-file-data.fold  x-exact-coords-bird-base.fold  x-exact-coords.fold  x.fold
