[package]
name = "ori_fold"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.226", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_repr = "0.1.20"
exact_number = { path = "./exact_number" }
indexmap = { version = "2.11.4", features = ["serde"] }
nalgebra = "0.34.1"
num-traits = "0.2.19"
float-ord = "0.3.2"
