[package]
name = "exact_number"
version = "0.1.0"
edition = "2024"

[dependencies]
# "0.3.0" has a fatal bug that makes it think √(2+√2) - √(2-√2) = 0
algebraics = { git = "https://salsa.debian.org/Kazan-team/algebraics" }
approx = "0.5.1"
dashu-float = "0.4.3"
dashu-int = "0.4.1"
malachite = "0.6.1"
nalgebra = "0.34.1"
num = "0.4.3"
peg = "0.8.5"
simba = "0.9.1"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]
